--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.12"
+    "@nuxtjs/tailwindcss": "^6.1.1",
+    "nuxt": "3.0.0-rc.12",
+    "sass": "^1.55.0"
   }
 }
