--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.1.1",
-    "nuxt": "3.0.0-rc.12",
-    "sass": "^1.55.0"
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "nuxt": "^3.0.0",
+    "postcss-custom-properties": "^13.0.0",
+    "sass": "^1.56.1"
   }
 }
