--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.1.3",
+    "@tailwindcss/forms": "^0.5.3",
     "nuxt": "^3.0.0",
     "postcss-custom-properties": "^13.0.0",
     "sass": "^1.56.1"
