Update config prettier

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,12 +1,11 @@
 {
-  "printWidth": 120,
-  "trailingComma": "none",
-  "tabWidth": 4,
-  "semi": false,
-  "singleQuote": true,
-  "bracketSpacing" : true,
-  "bracketSameLine": false,
-  "arrowParens": "avoid",
-  "singleAttributePerLine": true
-
+    "printWidth": 120,
+    "trailingComma": "none",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "bracketSameLine": true,
+    "arrowParens": "avoid",
+    "singleAttributePerLine": true
 }
