--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "devDependencies": {
     "@nuxtjs/supabase": "^0.3.0",
-    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@nuxtjs/tailwindcss": "^6.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "nuxt": "^3.0.0",
-    "postcss-custom-properties": "^13.0.0",
-    "sass": "^1.56.1"
+    "postcss-custom-properties": "^12.1.11",
+    "sass": "^1.57.1",
+    "@pinia/nuxt": "^0.4.6",
+    "pinia": "^2.0.28"
   }
 }
