--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "devDependencies": {
     "@nuxtjs/supabase": "^0.3.0",
     "@nuxtjs/tailwindcss": "^6.2.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "nuxt": "^3.0.0",
-    "postcss-custom-properties": "^12.1.11",
-    "sass": "^1.57.1",
     "@pinia/nuxt": "^0.4.6",
-    "pinia": "^2.0.28"
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "nuxt": "^3.0.0",
+    "pinia": "^2.0.28",
+    "postcss-custom-properties": "^12.1.11",
+    "sass": "^1.57.1"
   }
 }
