--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/supabase": "^0.3.0",
-    "@nuxtjs/tailwindcss": "^6.2.0",
-    "@pinia/nuxt": "^0.4.6",
+    "@nuxt/devtools": "^0.2.5",
+    "@nuxtjs/supabase": "^0.3.1",
+    "@nuxtjs/tailwindcss": "^6.4.1",
+    "@pinia/nuxt": "^0.4.7",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "nuxt": "^3.0.0",
-    "pinia": "^2.0.28",
-    "postcss-custom-properties": "^12.1.11",
-    "sass": "^1.57.1"
+    "nuxt": "^3.2.3",
+    "pinia": "^2.0.33",
+    "sass": "^1.58.3"
   }
 }
